# retain

./: README.md
backend/: .env  .gitignore  README.md  docker-compose.yml  index.js  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/Styles/: Header.css  Landing.css  Login.css  Signup.css
frontend/src/components/: Header.js  TextToSpeech.js
frontend/src/pages/: Article.js  Home.js  Landing.js  Lecture.js  Login.js  Signup.js
rag_service/: README.md  agent.py  pyproject.toml  rag.py  tester.py
